refactor in package view/workspace/