@@ -1,33 +1,27 @@
-package it.unibo.pixArt.view.workspace;
+package it.unibo.pixArt.view.abilitytest;
 
 import it.unibo.pixArt.model.pixel.Pixel;
 import it.unibo.pixArt.utilities.mirror.AbstractGenericMirror;
 import it.unibo.pixArt.utilities.mirror.Mirror;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static it.unibo.pixArt.utilities.variables.FXViewVariables.*;
 
-public class WorkSpaceLogic implements Logic {
+public class TesterLogic implements Logic {
 
-
-    private boolean isDrawing = false;
 
     public static final Set<String> imagePaths = new HashSet<>(List.of(IMAGE_PATH + TOAD_IMAGE, IMAGE_PATH + SONIC_IMAGE, IMAGE_PATH + HOMER_IMAGE, IMAGE_PATH + FLOPPY_BIRD));
 
-    private final int columns;
-    private final int rows;
     private final Mirror<Pixel> gridMirror = new AbstractGenericMirror<>();
 
-    public WorkSpaceLogic(final int rows, final int columns) {
-        this.rows = rows;
-        this.columns = columns;
+    public TesterLogic() {
+
     }
 
     @Override
     public String getImagePath() {
-        return imagePaths.stream().collect(Collectors.toList()).get(new Random().nextInt(imagePaths.size()));
+        return imagePaths.stream().toList().get(new Random().nextInt(imagePaths.size()));
     }
 
     public String test(final Collection<Pixel> userGrid) {
